2022-06-03  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list): Add loong to default.

	* ebuild-mode.el (ebuild-mode-modify-keywords): Use cons rather
	than append when adding a new keyword.

2022-05-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.60 released.

	* devbook-mode.el (devbook-insert-skeleton): Rework logic for
	guide element.

	* ebuild-mode.el (ebuild-run-command): Signal an error when not
	visiting a file.
	* glep-mode.el (glep-mode-format-html): Ditto.

2022-05-20  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.59 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* ebuild-mode.el (ebuild-mode, ebuild-repo-mode-maybe-enable):
	Protect against buffer-file-name being nil. Bug 846569.

2022-05-10  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclassdoc-warn):
	New variable.
	(ebuild-mode-keywords-eclass-documentation): Move @DEAD and
	@DEPRECATED keywords to it.
	* ebuild-mode.el (ebuild-mode-font-lock-keywords): Use it.

2022-05-08  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el: Drop unknown package keyword "XML".
	(devbook-mode-menu): Quote lisp symbol in docstring.
	* gentoo-newsitem-mode.el (gentoo-newsitem-mode-menu): Ditto.
	* glep-mode.el (rst-classify-adornment, glep-mode-menu): Ditto.

2022-05-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.58 released.

	* glep-mode.el (glep-mode-insert-skeleton): Update URL in comment.

	* ebuild-mode.el (ebuild-mode-get-keywords): Restore trivial
	compatibility code, allowing continued support for XEmacs 21.4.
	This reverts the change of 2022-04-28.

	* ebuild-mode-keywords.el (ebuild-mode-keywords): Provide feature.
	* ebuild-mode.el (ebuild-mode-keywords): Require it.

	* ebuild-mode.el (ebuild-mode-collect-equal-cdrs): Evaluate with
	eval-when-compile instead of eval-and-compile.

2022-05-03  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh: Use ebuild-mode-keywords-eclass as a